...
          tabBarIcon: ({ color }) => <StatusIcon color={color} size={22} />,
        }}
      />
      <Tabs.Screen
        name="chain"
        options={{
          title: 'CHAIN',
          tabBarIcon: ({ color }) => <ScrollIcon color={color} size={22} />,
        }}
      />
      <Tabs.Screen
        name="gym"
        options={{
...
